test: add tests for PaimonCatalogAdapter (#33)